[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/fonts/notosansjp_bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/ui/fonts/lato_bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://code/ui/common/texts/title.tscn" type="PackedScene" id=3]
[ext_resource path="res://code/ui/pages/games/scripts/party.gd" type="Script" id=4]
[ext_resource path="res://code/ui/common/buttons/check.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 14
use_filter = true
font_data = ExtResource( 2 )
fallback/0 = ExtResource( 1 )

[node name="Party" type="VBoxContainer"]
anchor_right = 1.0
margin_bottom = 109.0
custom_constants/separation = 16
script = ExtResource( 4 )

[node name="Title" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
margin_right = 512.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "Party size"

[node name="Options" type="HBoxContainer" parent="."]
margin_top = 33.0
margin_right = 512.0
margin_bottom = 61.0
custom_constants/separation = 16

[node name="Size" type="SpinBox" parent="Options"]
margin_right = 212.0
margin_bottom = 28.0
size_flags_horizontal = 3
min_value = 1.0
value = 1.0
align = 1

[node name="Of" type="Label" parent="Options"]
margin_left = 228.0
margin_top = 7.0
margin_right = 240.0
margin_bottom = 21.0
text = "of"

[node name="Max" type="SpinBox" parent="Options"]
margin_left = 256.0
margin_right = 468.0
margin_bottom = 28.0
size_flags_horizontal = 3
min_value = 1.0
value = 1.0
align = 1

[node name="Toggle" parent="Options" instance=ExtResource( 5 )]
margin_left = 484.0
margin_right = 512.0
margin_bottom = 28.0
hint_tooltip = "Visibility"

[node name="Separator" type="HSeparator" parent="."]
margin_top = 77.0
margin_right = 512.0
margin_bottom = 109.0
custom_constants/separation = 32

[connection signal="value_changed" from="Options/Size" to="." method="_on_Size_value_changed"]
[connection signal="value_changed" from="Options/Max" to="." method="_on_Max_value_changed"]
[connection signal="toggled" from="Options/Toggle" to="." method="_on_Toggle_toggled"]
